--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    
     <link href="css/styles.css" rel="stylesheet">
     <!-- endbuild -->
     <title>Foodergy</title>
@@ -51,6 +52,16 @@
                 </div>
                 <div class="col-xl-12">
                     <h4>Let us help you take the awkward moments out of finding a place to eat that will accomodate your alergies</h4>
+                </div>
+                <div class="col-md-6 offset-md-3">
+                <div class="row">
+                        <div class="col-md-6">
+                            <a role="button" class="btn btn-md btn1" id="jbutton"> Consumer</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a role="button" class="btn btn-md btn1" id="jbutton"> Restaurant</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
