added images and paragraph holders for home page. Also updated nav bar

--- a/consumers.html
+++ b/consumers.html
@@ -24,11 +24,11 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">AllergEAT</a>
+            <a class="navbar-brand" href="index.html">AllergEAT</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consumers.html"> Consumers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="consumers.html"> Consumers</a></li>
                     <li class="nav-item"><a class="nav-link" href="restaurant.html">Restaurant</a></li>
 
                 </ul>
